syntax = "proto3";

package Davidian.orbital;

message OrbitalElements{
    double semimajor_axis = 1;
    double eccentricity = 2;
    double longitude_asc_node = 3;
    double inclination = 4;
    double arg_periapsis = 5;
    double mean_anomaly_0 = 6;
}

message CartesianVector{
    double x = 1;
    double y = 2;
    double z = 3;
}

message StateVector{
    CartesianVector position = 1;
    CartesianVector velocity = 2;
}

message BodyData{
    string name = 1;
    double mass = 2;

    string parent_body_name = 3;

    OrbitalElements orbit = 4;
}

message RootBodyData{
    string name = 1;
    double mass = 2;
}

message Body{
    oneof body{
        RootBodyData root_body = 1;
        BodyData celestial_body = 2;
        BodyData free_body = 3;
    };
}